- convert dynfilt/flines.c to Imager::Filter::Flines
- minor changes for older perl/ExtUtils::MM
- deal with freetype-config --cflags returning the directories
  in the wrong order (Freetype 2.1.4 and earlier)
  Thanks to David Wheeler for his help in tracking this down.
- reword and provide an example for non-proportionally scaling an
  image.  Wording from Simon Cozens.
- error messages when writing TIFF images were always 
  'Could not write to buffer', more useful messages are now reported.
- error messages when writing PNM images were always
  'unable to write pnm image', more useful messages are now reported.
- convert t/t103raw.t to Test::More
- reading a raw image no longer exits on a short read or read error,
  and returns an appropriate error message in $im->errstr
- write failures when writing a raw image now return a useful
  message in $im->errstr
- added typemap type names to types in Imager::API.
- make skip when Inline::C not available less verbose
- convert t/t07iolayer.t to Test::More
- handle the possibility of strerror() returning NULL.
- supply C<imager> parameter to filters so we can register filters
  implemented in perl.
- document register_filter() and add test for it
- add example to SYNOPSIS of samples/inline_replace_color.pl
- minor POD fix in Imager::Color::Table
- eliminate many -Wall warnings
- update README to match unbuggy giflib
- document index parameter of Imager::Font->new()
- change faxable output to use a more fax natural PHOTOMETRIC_MINISWHITE, 
  since T.4 normally works that way, and MINISBLACK confuses some readers.
- clean up scale() method for readability
- make scale() fail if an invalid type is supplied (previously
  documented as undefined behaviour)
- add error handling tests for scale()

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
